# rightcode-floatingball

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml
src/: api.rs  app.rs  autostart.rs  ball.rs  config.rs  executor.rs  main.rs  platform.rs  tray.rs
