[package]
name = "rightcode-floatingball"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "5"
iced = { version = "0.13", features = ["canvas", "tokio", "wgpu"] }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls", "zstd"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
