[package]
name = "rightcode-floatingball"
version = "0.1.0"
edition = "2024"
description = "A floating desktop ball to display RightCode subscription quota (iced)"
homepage = "https://github.com/un4gt/rightcode-floatingball"
repository = "https://github.com/un4gt/rightcode-floatingball"
readme = "README.md"

[dependencies]
directories = "5"
iced = { version = "0.13", features = ["canvas", "tokio", "wgpu"] }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls", "zstd"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tray-icon = "0.21.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
